:bento: chore: 提交SEO

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="王庆杰的网站❤️杰哥大妓院">
+    <meta name="keywords" content="王庆杰, 杰哥, 木下加四点, 丁明月, 变态, 个人网站">
+    <meta name="author" content="オナニー少女">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>杰哥嫖娼</title>
